# nano-vllm-moe

./: .gitignore  README.md  README.zh-CN.md  Todo.md  awq_reference.pt  bench.py  benchmark_summary.txt  downmodel.py  ep_bench.py  ep_tp_bench.py  eval_ppl_nano_fp8.py  eval_ppl_wikitext.py  example.py  group_gemm_bench.py  moe.md  moe_compare.md  nano_logits.pt  pd_bench.py  pd_separate_report.md  plan.md  pyproject.toml  todo.md  tovllm.md
csrc/: fp8_gemm.cu
docs/: README_legacy.md  benchmarks.md  fp8_bf16_bench.md  pd_separate_report.md  pd_separate_report_bf16.md  pd_separate_report_fp8_w8a16.md  pd_separate_report_fp8_w8a8.md  quant_layer_audit.md  wikitext.md
nanovllm/: config.py
nanovllm/engine/: block_manager.py  llm_engine.py  model_runner.py  radix_tree.py  scheduler.py  sequence.py
nanovllm/executor/: __init__.py
nanovllm/kernels/: group_gemm.py  optimized_moe.py  sglang_moe.py
nanovllm/layers/: attention.py  attention_block.py  embed_head.py  fp8_linear.py  fp8_paged_attention.py  kv_cache_kernels.py  linear.py  linear_kernel.py  quant_linear.py  smooth_quant_linear.py
nanovllm/models/: backup.py  llama.py  models.py  qwen1_moe.py  qwen2.py  qwen2_fp8.py  qwen2_int8.py  qwen2_moe.py  qwen3.py  qwen3_moe.py
nanovllm/quant/: quant_awq.py  quant_smooth.py  quant_w8a16_fp8.py  quant_w8a8_fp8.py  test_awqint4.py
nanovllm/quantization/: __init__.py  base_config.py  (+4 more)
opt/: 4090_quant_stack_opt.md  README.md  chunked_prefill_opt.md  kv_cache_quant.md  moe_cuda_graph.md  prefix_cache_opt.md  w8a16.md  w8a8.md
scripts/: README.md
tests/: README.md
(+102 files in other folders)
